--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=DuAn1_Nhom2
-main.class=com.raven.main.Home
+main.class=com.raven.main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
