--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,12 +34,16 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAn1_Nhom2
 excludes=
 file.reference.miglayout-4.0.jar=miglayout-4.0.jar
+file.reference.miglayout-core.jar=D:\\PRO1014-OnePoly\\PRO1014-OnePoly\\dist\\lib\\miglayout-core.jar
+file.reference.miglayout-swing.jar=D:\\PRO1014-OnePoly\\PRO1014-OnePoly\\dist\\lib\\miglayout-swing.jar
 file.reference.TimingFramework-0.55.jar=TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.miglayout-4.0.jar}:\
-    ${file.reference.TimingFramework-0.55.jar}
+    ${file.reference.TimingFramework-0.55.jar}:\
+    ${file.reference.miglayout-core.jar}:\
+    ${file.reference.miglayout-swing.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
