--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=DuAn1_Nhom2
+application.vendor=ADMIN
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,18 +33,17 @@ dist.jar=${dist.dir}/DuAn1_Nhom2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAn1_Nhom2
+endorsed.classpath=
 excludes=
-file.reference.miglayout-4.0.jar=miglayout-4.0.jar
+file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
 file.reference.miglayout-core.jar=D:\\PRO1014-OnePoly\\PRO1014-OnePoly\\dist\\lib\\miglayout-core.jar
 file.reference.miglayout-swing.jar=D:\\PRO1014-OnePoly\\PRO1014-OnePoly\\dist\\lib\\miglayout-swing.jar
-file.reference.TimingFramework-0.55.jar=TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.miglayout-4.0.jar}:\
-    ${file.reference.TimingFramework-0.55.jar}:\
     ${file.reference.miglayout-core.jar}:\
-    ${file.reference.miglayout-swing.jar}
+    ${file.reference.miglayout-swing.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
