hoan thanh repo thuoc tinh

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,12 +38,16 @@ excludes=
 file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
 file.reference.miglayout-core.jar=D:\\PRO1014-OnePoly\\PRO1014-OnePoly\\dist\\lib\\miglayout-core.jar
 file.reference.miglayout-swing.jar=D:\\PRO1014-OnePoly\\PRO1014-OnePoly\\dist\\lib\\miglayout-swing.jar
+file.reference.mssql-jdbc-12.6.1.jre11.jar=C:\\Users\\Ca1\\Downloads\\sqljdbc_12.6.1.0_enu\\sqljdbc_12.6\\enu\\jars\\mssql-jdbc-12.6.1.jre11.jar
+file.reference.mssql-jdbc-12.6.1.jre8.jar=C:\\Users\\Ca1\\Downloads\\sqljdbc_12.6.1.0_enu\\sqljdbc_12.6\\enu\\jars\\mssql-jdbc-12.6.1.jre8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.miglayout-core.jar}:\
     ${file.reference.miglayout-swing.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mssql-jdbc-12.6.1.jre11.jar}:\
+    ${file.reference.mssql-jdbc-12.6.1.jre8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
