--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,7 +2,8 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.miglayout-core.jar=D:\\lastpcHP\\SU24BL2\\CNTT\\DA1\\Doccument\\lib\\miglayout-4.0.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\21\\build.properties
+user.properties.file=C:\\Users\\Lenovo\\AppData\\Roaming\\NetBeans\\22\\build.properties
