--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,14 +36,18 @@ dist.jlink.output=${dist.jlink.dir}/DuAn1_Nhom2
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
+file.reference.lombok.jar=C:\\Users\\Lenovo\\Downloads\\lombok.jar
 file.reference.miglayout-core.jar=D:\\PRO1014-OnePoly\\PRO1014-OnePoly\\dist\\lib\\miglayout-core.jar
-file.reference.miglayout-swing.jar=D:\\PRO1014-OnePoly\\PRO1014-OnePoly\\dist\\lib\\miglayout-swing.jar
+file.reference.mssql-jdbc-7.2.2.jre8.jar=lib\\mssql-jdbc-7.2.2.jre8.jar
+file.reference.TimingFramework-0.55.jar=lib\\TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.miglayout-core.jar}:\
-    ${file.reference.miglayout-swing.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.TimingFramework-0.55.jar}:\
+    ${file.reference.lombok.jar}:\
+    ${file.reference.mssql-jdbc-7.2.2.jre8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
