--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAn1_Nhom2
 endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.9.4.jar=C:\\Users\\Ca1\\Downloads\\commons-beanutils-1.9.4-bin\\commons-beanutils-1.9.4\\commons-beanutils-1.9.4.jar
 file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
 file.reference.miglayout-core.jar=D:\\PRO1014-OnePoly\\PRO1014-OnePoly\\dist\\lib\\miglayout-core.jar
 file.reference.miglayout-swing.jar=D:\\PRO1014-OnePoly\\PRO1014-OnePoly\\dist\\lib\\miglayout-swing.jar
@@ -47,7 +48,8 @@ javac.classpath=\
     ${file.reference.miglayout-swing.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mssql-jdbc-12.6.1.jre11.jar}:\
-    ${file.reference.mssql-jdbc-12.6.1.jre8.jar}
+    ${file.reference.mssql-jdbc-12.6.1.jre8.jar}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
